# Yuntech-course-bot

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
modules/: browser_manager.py  captcha_solver.py  course_enroller.py  course_monitor.py  exceptions.py  logger.py
